[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pvlan"
dynamic = ["version"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: No Input/Output (Daemon)",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking"
]
description = "Private Layer-2 multicast VPN"
dependencies = [
    "pycose"
]
# Python 3.7.4+ required due to
# https://github.com/python/cpython/commit/19ca5b500af4b66e1082a03d8fbf448e1f56af30
requires-python = ">=3.7.4"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "AGPL-3.0-or-later"

[[project.authors]]
name = "Stuart Longland"
email = "me@vk4msl.com"

[tool.pytest.ini_options]
log_cli=true

[tool.setuptools.dynamic]
version = {attr = "pvlan.__version__"}
